# bcos-executor

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: workflow.yml
cmake/: ProjectEVMC.cmake  ProjectEVMONE.cmake  ProjectHera.cmake  ProjectLibFF.cmake  ProjectSecp256k1.cmake  ProjectWABT.cmake  config.cmake
doc/: README_CN.md
include/bcos-executor/: Executor.h  LRUStorage.h  TransactionExecutor.h
libexecutor/: CMakeLists.txt  Common.h  ExecutiveContext.h  ExecutiveContextFactory.cpp  ExecutiveContextFactory.h  Executor.cpp  Executor.h  Precompiled.h  PrecompiledContract.h  TxDAG.cpp  TxDAG.h
libmetering/: CMakeLists.txt  GasInjector.h  Metric.cpp
libprecompiled/: CMakeLists.txt  CNSPrecompiled.cpp  CNSPrecompiled.h  CRUDPrecompiled.cpp  CRUDPrecompiled.h  Common.h  ConditionPrecompiled.cpp  ConditionPrecompiled.h  ConsensusPrecompiled.cpp  ConsensusPrecompiled.h  CryptoPrecompiled.cpp  CryptoPrecompiled.h  DeployWasmPrecompiled.cpp  EntriesPrecompiled.cpp  EntriesPrecompiled.h  EntryPrecompiled.cpp  EntryPrecompiled.h  FileSystemPrecompiled.cpp  FileSystemPrecompiled.h  KVTableFactoryPrecompiled.cpp  KVTableFactoryPrecompiled.h  KVTablePrecompiled.cpp  KVTablePrecompiled.h  ParallelConfigPrecompiled.cpp  ParallelConfigPrecompiled.h  Precompiled.cpp  Precompiled.h  PrecompiledCodec.h  PrecompiledGas.cpp  PrecompiledGas.h  PrecompiledResult.h  SystemConfigPrecompiled.cpp  SystemConfigPrecompiled.h  TableFactoryPrecompiled.cpp  TableFactoryPrecompiled.h  TablePrecompiled.cpp  TablePrecompiled.h  Utilities.cpp  Utilities.h
libprecompiled/extension/: CMakeLists.txt  DagTransferPrecompiled.cpp  DagTransferPrecompiled.h  GroupSigPrecompiled.cpp  GroupSigPrecompiled.h  HelloWorldPrecompiled.cpp  HelloWorldPrecompiled.h  PaillierPrecompiled.cpp  PaillierPrecompiled.h  RingSigPrecompiled.cpp  RingSigPrecompiled.h  UserPrecompiled.h
libprecompiled/solidity/: CNSPrecompiled.sol  CRUDPrecompiled.sol  SystemConfigPrecompiled.sol  Table.sol
libstate/: CMakeLists.txt  State.cpp  State.h  StateInterface.h
libvm/: Blake2.cpp  Blake2.h  BlockContext.cpp  BlockContext.h  CMakeLists.txt  Common.cpp  Common.h  ECRecover.cpp  ECRecover.h  EVMHostInterface.cpp  Executive.cpp  Executive.h  ExecutiveContext.cpp  ExecutiveContext.h  Hash.cpp  Hash.h  HostContext.cpp  HostContext.h  LibFF.cpp  LibFF.h  Precompiled.cpp  Precompiled.h  PrecompiledContract.cpp  PrecompiledContract.h  RIPEMD160.cpp  RIPEMD160.h  SHA256.cpp  SHA256.h  VMFactory.cpp  VMFactory.h  VMInstance.h
libvm/gas_meter/: GasInjector.cpp  Metric.cpp
src/: CMakeLists.txt  CallParameters.h  Common.h
src/dag/: Abi.h  TxDAG.cpp  TxDAG.h
src/executive/: BlockContext.cpp  BlockContext.h  CoroutineStorageWrapper.h  TransactionExecutive.cpp  TransactionExecutive.h
src/executor/: Abi.cpp  Common.h  DAG.h  Executor.cpp  TransactionExecutor.cpp  TxDAG.cpp  TxDAG.h
src/libexecutor/: Common.h  Executor.cpp  TxDAG.cpp  TxDAG.h
src/libprecompiled/: CNSPrecompiled.cpp  CNSPrecompiled.h  CRUDPrecompiled.cpp  CRUDPrecompiled.h  Common.h  ConditionPrecompiled.cpp  ConsensusPrecompiled.cpp  ConsensusPrecompiled.h  CryptoPrecompiled.cpp  CryptoPrecompiled.h  DeployWasmPrecompiled.cpp  DeployWasmPrecompiled.h  EntryPrecompiled.cpp  FileSystemPrecompiled.cpp  FileSystemPrecompiled.h  KVTableFactoryPrecompiled.cpp  KVTableFactoryPrecompiled.h  KVTablePrecompiled.cpp  ParallelConfigPrecompiled.cpp  ParallelConfigPrecompiled.h  PrecompiledCodec.h  SystemConfigPrecompiled.cpp  SystemConfigPrecompiled.h  TableFactoryPrecompiled.cpp  TablePrecompiled.cpp  Utilities.cpp  Utilities.h
src/libprecompiled/extension/: DagTransferPrecompiled.cpp  DagTransferPrecompiled.h  GroupSigPrecompiled.cpp  HelloWorldPrecompiled.cpp  PaillierPrecompiled.h  UserPrecompiled.h
src/libstate/: State.cpp  StateInterface.h
src/libvm/: BlockContext.cpp  BlockContext.h  Common.h  EVMHostInterface.cpp  EVMHostInterface.h  Executive.cpp  Executive.h  HostContext.cpp  HostContext.h  Precompiled.cpp  Precompiled.h  TransactionExecutive.cpp  TransactionExecutive.h  VMInstance.cpp
src/libvm/gas_meter/: Metric.h
src/precompiled/: CNSPrecompiled.cpp  CNSPrecompiled.h  CRUDPrecompiled.cpp  CRUDPrecompiled.h  Common.h  ConditionPrecompiled.cpp  ConditionPrecompiled.h  ConsensusPrecompiled.cpp  ConsensusPrecompiled.h  CryptoPrecompiled.cpp  CryptoPrecompiled.h  DeployWasmPrecompiled.cpp  DeployWasmPrecompiled.h  EntriesPrecompiled.cpp  EntriesPrecompiled.h  EntryPrecompiled.cpp  EntryPrecompiled.h  FileSystemPrecompiled.cpp  FileSystemPrecompiled.h  KVTableFactoryPrecompiled.cpp  KVTableFactoryPrecompiled.h  KVTablePrecompiled.cpp  KVTablePrecompiled.h  ParallelConfigPrecompiled.cpp  ParallelConfigPrecompiled.h  PrecompiledCodec.h  SystemConfigPrecompiled.cpp  SystemConfigPrecompiled.h  TableFactoryPrecompiled.cpp  TableFactoryPrecompiled.h  TablePrecompiled.cpp  TablePrecompiled.h  Utilities.cpp  Utilities.h
src/precompiled/extension/: AuthPrecompiledTest.h  ContractAuthPrecompiled.cpp  ContractAuthPrecompiled.h  DagTransferPrecompiled.cpp  DagTransferPrecompiled.h  HelloWorldPrecompiled.cpp  HelloWorldPrecompiled.h  PermissionPrecompiled.cpp  PermissionPrecompiled.h  PermissionPrecompiledInterface.h  UserPrecompiled.h
src/precompiled/solidity/: ConsensusPrecompiled.sol  (+3 more)
src/state/: State.cpp  State.h  StateInterface.h
src/storage/: LRUStorage.cpp  LRUStorage.h
src/vm/: BlockContext.cpp  BlockContext.h  Common.cpp  Common.h  EVMHostInterface.cpp  HostContext.cpp  HostContext.h  Precompiled.cpp  Precompiled.h  TransactionExecutive.cpp  TransactionExecutive.h  VMInstance.cpp  VMInstance.h
test/: CMakeLists.txt
test/solidity/: TableTest.sol  test_crud.sol  test_crypto.sol  test_external_call.sol
test/unittest/: CMakeLists.txt  EVMPrecompiledTest.cpp  MemoryStorage.h  PrecompiledTest.cpp  StateTest.cpp
tools/: inject_meter.cpp
(+56 files in other folders)
